--- a/lebih_lanjut.html
+++ b/lebih_lanjut.html
@@ -10,7 +10,7 @@
 
         <link rel="stylesheet" type="text/css" href="index.css" />
         <link href="./gambar/img-5.png" rel="shortcut icon">
-        <title>Teman-Apridan Husaeni Muharam</title> 
+        <title>Lebih lannjut-Apridan Husaeni Muharam</title> 
     </head>
 
     <body>
