--- a/index.html
+++ b/index.html
@@ -64,9 +64,11 @@
         
         <!-- portofolio  -->
         <div class="porto">
-            <h2>
-                Portofolio Saya
-            </h2>
+            <div>
+                <h2 class:"judul">
+                    Portofolio Saya
+                </h2>
+            </div>
         </div>
         <br>
         <div class="container-fluid mt-3">
