punten nge-push

--- a/teman.html
+++ b/teman.html
@@ -73,7 +73,7 @@
 
                 <div class="col-md-3">
                     <div class="d-flex flex-column align-items-center text-center p-3 py-5">
-                        <a href="https://www.instagram.com/yuardh_/" target="_blank"></a><img class="rounded-circle mt-5" width="150px" height="150" src="./gambar/yusuf.jpg"></a>
+                        <a href="https://www.instagram.com/yuardh_/" target="_blank"><img class="rounded-circle mt-5" width="150px" height="150" src="./gambar/yusuf.jpg"></a>
                         <span class="font-weight-bold" style="color: #051E2F;">Yusuf Ardiansyah</span><span class="text-black-50"></span>
                         <span> 
                             <a href="https://www.instagram.com/yuardh_/" target="_blank" style="color: #051E2F;"><i class="bi bi-instagram"></i> yuardh_</a>
