--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         
         <!--Vue-->
         <script src="https://unpkg.com/vue@3"></script>
-        <script src=""></script>
+        <script src="./js/main.js"></script>
     </body>
 </html>
 
