--- a/index.html
+++ b/index.html
@@ -197,6 +197,8 @@
         </footer>
         
         <!--Vue-->
+        <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/2.0.3/showdown.min.js"></script>
         <script src="https://unpkg.com/vue@3"></script>
         <script src="./js/main.js"></script>
     </body>
